syntax = "proto3";

option go_package = "common/authorization";

package authorization;

import "google/api/annotations.proto";

service AuthorizationService{
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/account-credentials",
      //body:"*" works if JSON body has one top level object, otherwise you need to list all individual fields by hand
      body: "*"
    };
  }

  rpc GetByUsername(GetByUsernameRequest) returns(GetByUsernameResponse) {
    option (google.api.http) = {
      get: "/account-credentials/{username}"
    };
  }
}

message CreateRequest {
  CreateAccountCredentials accountCredentials = 1;
}

message CreateResponse {
   string id = 1;
}

message GetByUsernameRequest{
 string username = 1;
}

message GetByUsernameResponse{
  AccountCredentials accountCredentials = 1;
}

enum Role {
  Host = 0;
  Guest = 1;
}

message CreateAccountCredentials {
  string username = 1;
  string password = 2;
  Role role = 3;
}
message AccountCredentials {
  string id = 1;
  string username = 2;
  string password = 3;
  string salt = 4;
  Role role = 5;
}
